--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header {
 }
 
 body > * {
-    background-color: red;
+    background-color: rgb(0, 255, 21);
     padding: 1%;
 }
 
@@ -116,7 +116,7 @@ nav span {
     line-height: 1.7;
     text-transform: uppercase;
     text-decoration: none;
-    color: black;
+    color: rgb(0, 0, 0);
 }
 
 /* || main layout */
